--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,10 +28,9 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="index.html">HOME</a></li>
+
 					<li><a class="nav-link active" href="about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
-								class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -53,8 +52,8 @@
 							<li><a href="services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="services/cx-audits.html">CX Audits</a></li>
-							<li><a href="services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="services/cx-audits.html">CX Audits</a></li>
+							<li><a href="services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="career.html">CAREERS</a></li>
@@ -72,7 +71,7 @@
 			<p class="subtext">About Us</p>
 			<h1>Committed to continuous improvement
 			</h1>
-
+			<p>Your partner from day one</p>
 		</div>
 		</div>
 	</section>
@@ -83,11 +82,16 @@
 				<div class="row content">
 					<div class="col-xl-12">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
-							ipsum dolor sit amet,
+							Torinit exists to serve mid-market companies on their path to success. We’re more than consultants — we’re
+							full partners
+							in your journey to solving critical business problems and charting desirable futures. We pride ourselves
+							in becoming
+							incredibly attached to your projects, taking time to deeply understand your challenges and building
+							empathy with your
+							consumers. We don’t believe in blanket solutions, but work relentlessly to deliver customized services
+							that drive
+							transformational growth.
+
 						</p>
 					</div>
 				</div>
@@ -136,13 +140,44 @@
 					<div class="col-12">
 						<div class="section-title">
 							<div class="subtext">OUR VISION</div>
-							<h2>Democratizing technology for mid-market enterprises</h2>
+							<h2>Unlock the true potential of every organization through innovation and consistent improvement.
+							</h2>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!--End Our Vision-->
+		<section class="description">
+			<div class="container container-xs">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title">
+							<h2>Our History</h2>
+						</div>
+					</div>
+				</div>
+				<div class="row content">
+					<div class="col-xl-12">
+						<p class="mb-0">
+							Torinit was founded in 2016 as a software development firm to fill a gap in the digital ecosystem. Unlike
+							other service
+							providers, we’ve always placed our clients’ long-term success at the heart of everything we do, working
+							from a place of
+							transparency and absolute commitment to our business relationships. This ethos has helped us evolve into a
+							fast-growing
+							strategic partner with consulting, strategy and design operations in Toronto, and core engineering offices
+							in Pune,
+							India. We’ve since built game-changing digital solutions for market leaders across industries,
+							facilitating over $200
+							million in revenue enablement and $20 million in operational savings.
+
+
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!--Values-->
 		<section class="values">
 			<div class="container container-xs">
@@ -153,19 +188,19 @@
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Empathy</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+							<p>Humans First</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Accountability</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+							<p>Leading with Clarity</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Reliability</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+							<p>There when you need us</p>
 						</div>
 					</div>
 				</div>
@@ -180,87 +215,142 @@
 				</div>
 				<div class="row content">
 					<div class="col-12">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
-							ipsum dolor sit amet,</p>
 						<img src="assets/img/our-people.png" class="img-fluid w-100">
 					</div>
 				</div>
+
+
+
+
 			</div>
 		</section>
 		<!--end Defined by our people-->
+		<section class="goal contentonly">
+			<div class="container container-xs">
+
+
+				<div class="row">
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Moral</h3>
+							</div>
+							<p>We believe that progress is achieved when everyone is moving together in the same direction. We
+								strive to better the
+								world by bettering the companies and people responsible for the future.</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Deep thinkers
+								</h3>
+							</div>
+							<p>We’re not afraid of the hard questions. Our willingness to go the extra mile and consider every
+								single variable leads us
+								to the best solution — not just a solution.</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Empathetic</h3>
+							</div>
+							<p>We see the world through our clients’ eyes and build layers of empathy with their consumers to
+								create human-centric
+								solutions.</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Dependable
+
+								</h3>
+							</div>
+							<p>We’re not a vendor, we’re a partner. We’re not service providers, we’re problem-solvers. Whatever
+								challenge you face,
+								we’ll invest our full selves in finding the way forward.</p>
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Inventive
+
+								</h3>
+
+							</div>
+							<p>We don’t believe in one-size-fits-all solutions. Rather, we approach every problem with an
+								innovative spirit to deliver
+								the best solutions.</p>
+
+						</div>
+					</div>
+					<div class="columnbox3">
+						<div class="hoverbox">
+
+							<div class="content-title">
+								<h3>Valuable
+								</h3>
+							</div>
+							<p>Success isn’t measured in dollars or starred reviews, but in our ability to propel our clients into
+								the future with
+								every thought, milestone and project.</p>
+
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</section>
 		<!--Subject matter experts-->
 		<section class="description">
 			<div class="container container-xs">
 				<div class="section-title">
 					<h2>Subject matter experts</h2>
 				</div>
-				<div class="row content">
-					<div class="col-12">
-						<p class="mr-btm-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor
-							incididunt ut
-							labore et dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
-							ipsum dolor sit amet,</p>
 
-					</div>
-				</div>
-				<div class="row masonry-layout">
+				<div class="row masonry-layout no-content">
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Strategy & Insights</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty programs and
-								re-targeting initiatives even though.</p>
+
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Product Management</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Digital Product Design</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Engineering & QA</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Product Marketing</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Delivery & DevOps</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+
 						</div>
 					</div>
 
@@ -274,18 +364,7 @@
 				<div class="section-title">
 					<h2>Global Locations</h2>
 				</div>
-				<div class="row content">
-					<div class="col-12">
-						<p class="mr-btm-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor
-							incididunt ut labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
-					</div>
-				</div>
+
 				<div class="row">
 					<div class="col-md-4">
 						<div class="locationbox">
@@ -323,7 +402,9 @@
 			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-md-8">
-						<h3>Connect with us to learn more</h3>
+						<h3>Connect with us to learn more
+
+						</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
 						<a href="contact" class="btn-learn-more">Contact Us</a>
@@ -342,14 +423,14 @@
 					<img src="assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="index">Home</a></li>
+
 								<li><a href="about">About</a></li>
 								<li><a href="goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="services/digital-transformation.html">Services</a></li>
@@ -358,11 +439,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
