--- a/goals/build-data-intelligence.html
+++ b/goals/build-data-intelligence.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,9 +28,9 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="../index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link active" href="#"><span>Solutions</span><i
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
@@ -41,7 +41,8 @@
 							</li>
 							<li><a href="../goals/optimize-operations.html">Optimize operations</a></li>
 							<li><a href="../goals/build-better-products.html">Build better products</a></li>
-							<li><a href="../goals/build-data-intelligence.html">Build data intelligence</a></li>
+							<li><a class="active" href="../goals/build-data-intelligence.html">Build data
+									intelligence</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -53,8 +54,8 @@
 							<li><a href="../services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="../services/cx-audits.html">CX Audits</a></li>
-							<li><a href="../services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="../services/cx-audits.html">CX Audits</a></li>
+							<li><a href="../services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="../career.html">CAREERS</a></li>
@@ -68,10 +69,9 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-3">
 		<div class="banner-container container">
-			<p class="subtext">Goal</p>
-			<h1>Build Data Intelligence</h1>
-			<p>Leading business transformation through High-Impact
-				digital solutions.
+
+			<h1>Build data intelligence</h1>
+			<p>Create a data-driven culture that builds a competitive edge and unlocks true performance.
 			</p>
 		</div>
 		</div>
@@ -83,33 +83,43 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="section-title">
-							<h2>Initiatives driving strategic revenue growth today</h2>
+							<h2>Data Intelligence is the single largest intangible asset.
+							</h2>
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row largedata">
 					<div class="col-md-12">
 						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+							<h3>Data Mining</h3>
+							<p>Understanding the current state of data collection, and extracting valuable data for
+								further
+								sanitization is the first
+								step in creating data driven intelligence.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+							<h3>Data Sanitization</h3>
+							<p>Data cleansing is key in keeping a neutral data set to avoid any unreliable insights.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+							<h3>Data Organization
+							</h3>
+							<p>Structuring cleaned data sets so they are ready to be analyzed and acted upon.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+							<h3>Actionable Insight</h3>
+							<p>Providing enterprises with actionable insights that could be measured with micro
+								experiments, and then
+								scaled to gain
+								its full potential.</p>
 						</div>
 					</div>
 				</div>
@@ -120,27 +130,32 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Torinit’s approach to digital transformation</h2>
+					<h2>Our Approach to achieving actionable insights
+					</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
+						<p>Most enterprises are sitting on a data goldmine left untouched. The right data strategy and
+							architecture
+							can enable
+							insights-driven decisions that improve customer satisfaction, optimize workflows, and
+							generate revenue
+							growth. We help
+							you design or scale your intelligence capabilities by finding opportunities for
+							transformation, and
+							implementing unified
+							processes that solidify your data advantage.</p>
 					</div>
 				</div>
 				<div class="row steps">
+
 					<div class="col-md-4">
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Map your data pipeline to review or uncover opportunities for data capture.
+
 								</p>
 							</div>
 						</div>
@@ -149,9 +164,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Audit existing data sets to clean and consolidate data, allowing you to build new
+									layers of insights.
 								</p>
 							</div>
 						</div>
@@ -160,9 +175,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Assess your legal and governance environment.
+
 								</p>
 							</div>
 						</div>
@@ -171,9 +186,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Discover data opportunities based on your business goals.
+
 								</p>
 							</div>
 						</div>
@@ -182,9 +197,23 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Build a holistic data strategy that generates actionable insights across the
+									stakeholder journey.
+
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4">
+						<div class="step">
+							<img src="../assets/img/steps.svg">
+							<div class="content">
+
+								<p>Identify opportunities for enhancement through machine learning and artificial
+									intelligence.
+
 								</p>
 							</div>
 						</div>
@@ -193,9 +222,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Implement and monitor success.
+
 								</p>
 							</div>
 						</div>
@@ -205,43 +234,51 @@
 			</div>
 		</section>
 		<!--End Torinit approach-->
-
-		<!-- ======= casestudy Section ======= -->
-		<section id="casestudy" class="casestudy casestudyinner">
+		<section id="services" class="services ">
 			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Our Impact</h2>
-				</div>
-				<div class="row content">
-					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
-							data-bs-interval="5000" style="overflow:hidden">
-							<div class="carousel-item  active">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore
-									et dolore magna
-									aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-									non arcu risus quis
-									varius.
-								</p>
-
-								<a href="#" class="btn-learn-more">
-									Learn More
-								</a>
-							</div>
-
-
+				<div class="row">
+					<div class="col-12 services-associate">
+						<div class="section-title">
+							<h2>Services associated with building better product</h2>
 						</div>
-
-					</div>
-					<div class="col-lg-5">
-						<img src="../assets/img/our-impact.png" class="img-fluid casestudyimg">
 					</div>
 				</div>
 			</div>
+			<div class="container-fluid p-0">
+
+				<div class="row">
+					<!--service-1-->
+					<div class="bluebox">
+						<div class="bluebox d-block d-md-none">
+							<div class="imagecontent">
+								<img src="../assets/img/home/services/digital-tranformation.png">
+							</div>
+						</div>
+						<div class="content">
+							<h3>Digital Transformation</h3>
+							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
+								have worked
+								relentlessly to create
+								a proven framework that helps transform business processes from initiation to execution
+								with the help of
+								state of the
+								art digital technologies.
+							</p>
+							<a href="../services/digital-transformation.html" class="btn-learn-more stretched-link">
+								<i class="bi bi-arrow-right"></i> </a>
+						</div>
+					</div>
+					<div class="bluebox d-none d-md-block">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/digital-tranformation.png">
+						</div>
+					</div>
+
+					<!--end-->
+				</div>
+			</div>
 		</section>
-		<!-- End casestudy Section -->
+
 		<!--CTA-->
 		<section class="cta">
 			<div class="container container-xs">
@@ -266,14 +303,14 @@
 					<img src="../assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="../index">Home</a></li>
+
 								<li><a href="../about">About</a></li>
 								<li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="../services/digital-transformation.html">Services</a></li>
@@ -282,11 +319,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
