--- a/goals/improve-digital-experiences.html
+++ b/goals/improve-digital-experiences.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,14 +28,15 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="../index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link active" href="#"><span>Solutions</span><i
+					<li class="dropdown"><a class="nav-link " href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
-							<li><a href="../goals/improve-digital-experiences.html">Improve digital experiences</a></li>
+							<li><a class="active" href="../goals/improve-digital-experiences.html">Improve digital
+									experiences</a></li>
 							<li><a href="../goals/accelerate-sales.html">Accelerate sales
 								</a>
 							</li>
@@ -53,8 +54,8 @@
 							<li><a href="../services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="../services/cx-audits.html">CX Audits</a></li>
-							<li><a href="../services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="../services/cx-audits.html">CX Audits</a></li>
+							<li><a href="../services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="../career.html">CAREERS</a></li>
@@ -68,10 +69,11 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-4">
 		<div class="banner-container container">
-			<p class="subtext">Goal</p>
-			<h1>Improve Digital Experiences</h1>
-			<p>Leading business transformation through High-Impact
-				digital solutions.
+
+			<h1>Modernize Customer Experiences
+			</h1>
+			<p>Create exceptional experiences that delight users.
+
 			</p>
 		</div>
 		</div>
@@ -83,33 +85,61 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="section-title">
-							<h2>Initiatives driving strategic revenue growth today</h2>
+							<h2>Experience is more than look and feel. It is how you deliver value.
+							</h2>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+				<div class="row largedata">
+					<div class="col-lg-12 col-md-6">
+						<div class="contentbox largeboxesfirst">
+							<h3>Experience is more than looks</h3>
+							<p>Digital experience mapping is a combination of art and psychology where the goal is to
+								deliver
+								information in a way that
+								inspires your users to do exactly what they signed on to do with all their questions,
+								concerns, or fears
+								addressed.
+								Eliminating guesswork is the biggest challenge faced by enterprises utilizing digital
+								experiences for
+								revenue generation
+								purposes.
+							</p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+					<div class="col-lg-4 col-md-6">
+						<div class="contentbox largeboxes">
+							<h3>Value driven experience mindset</h3>
+							<p>Get your users to their end destination as easily as possible. Guide them through
+								navigating digital
+								experience with
+								assisted tools or human resources.</p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+					<div class="col-lg-4 col-md-6">
+						<div class="contentbox largeboxes">
+							<h3>Unified experience
+							</h3>
+							<p>Mapping each touchpoint of your stakeholders in an assembly line view to optimize their
+								experience is
+								an exercise
+								enterprises need to continuously perform in order to always stay ahead in providing
+								experience that is
+								accessible, value
+								driven, object oriented, and inspiring to achieve desired outcomes.
+							</p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+					<div class="col-lg-4 col-md-6">
+						<div class="contentbox largeboxes">
+							<h3>Influencing external players
+							</h3>
+							<p>Empathizing with users to understand their emotions behind a screen is imperative.
+								Winning by design is
+								not possible
+								with a siloed approach, aligning your brand values to deliver an experience is key to
+								setting your brand
+								apart.</p>
 						</div>
 					</div>
 				</div>
@@ -120,17 +150,21 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Torinit’s approach to digital transformation</h2>
+					<h2>Our approach to modernizing digital experiences</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
+						<p>To remain relevant, businesses must understand how to meet and adapt to their customers’
+							changing needs.
+							We help you
+							build or refine winning experiences that drive brand loyalty at every touchpoint, and align
+							stakeholders
+							behind common
+							objectives. By adopting great CX practices, you’ll be able to deliver highly engaging user
+							journeys that
+							drive
+							retention, and eliminate barriers to financial performance.
+						</p>
 					</div>
 				</div>
 				<div class="row steps">
@@ -138,9 +172,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Map and review the existing customer experience.
+
 								</p>
 							</div>
 						</div>
@@ -149,9 +183,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Analyse customer expectations, legal obligations, and governance changes.
+
 								</p>
 							</div>
 						</div>
@@ -160,9 +194,8 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Review cross-industry leading trends and benchmarks.
 								</p>
 							</div>
 						</div>
@@ -171,9 +204,8 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Map out a desired user journey with minimal friction
 								</p>
 							</div>
 						</div>
@@ -182,9 +214,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Architect, design, build and test for usability.
+
 								</p>
 							</div>
 						</div>
@@ -193,9 +225,8 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Implement and iterate
 								</p>
 							</div>
 						</div>
@@ -205,43 +236,48 @@
 			</div>
 		</section>
 		<!--End Torinit approach-->
-
-		<!-- ======= casestudy Section ======= -->
-		<section id="casestudy" class="casestudy casestudyinner">
+		<section id="services" class="services ">
 			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Our Impact</h2>
-				</div>
-				<div class="row content">
-					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
-							data-bs-interval="5000" style="overflow:hidden">
-							<div class="carousel-item  active">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore
-									et dolore magna
-									aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-									non arcu risus quis
-									varius.
-								</p>
-
-								<a href="#" class="btn-learn-more">
-									Learn More
-								</a>
-							</div>
-
-
+				<div class="row">
+					<div class="col-12 services-associate">
+						<div class="section-title">
+							<h2>Services associated with modernizing digital experience</h2>
 						</div>
-
 					</div>
-					<div class="col-lg-5">
-						<img src="../assets/img/our-impact.png" class="img-fluid casestudyimg">
+				</div>
+			</div>
+			<div class="container-fluid p-0">
+
+				<div class="row">
+					<div class="bluebox">
+						<div class="bluebox d-block d-md-none">
+							<div class="imagecontent">
+								<img src="../assets/img/home/services/experience-design.png">
+							</div>
+						</div>
+						<div class="content">
+							<h3>Experience Design</h3>
+							<p>Creating or improving meaningful experiential journeys for your customers, consumers,
+								employees has a
+								direct correlation
+								with the health of your enterprise both financially and qualitatively. Invest in
+								seamless experiences to
+								realize the
+								true potential of their value chain.
+							</p>
+							<a href="../services/experience-design.html" class="btn-learn-more stretched-link">
+								<i class="bi bi-arrow-right"></i> </a>
+						</div>
+					</div>
+					<div class="bluebox d-none d-md-block">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/experience-design.png">
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- End casestudy Section -->
+
 		<!--CTA-->
 		<section class="cta">
 			<div class="container container-xs">
@@ -266,14 +302,14 @@
 					<img src="../assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="../index">Home</a></li>
+
 								<li><a href="../about">About</a></li>
 								<li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="../services/digital-transformation.html">Services</a></li>
@@ -282,11 +318,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
