--- a/services/digital-transformation.html
+++ b/services/digital-transformation.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Torinit Technologies and Ventures</title>
+  <title>Torinit</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!-- Favicons -->
@@ -28,7 +28,7 @@
       </div>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link" href="../index.html">HOME</a></li>
+
           <li><a class="nav-link" href="../about.html">ABOUT</a></li>
           <li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -44,16 +44,16 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a class="nav-link active" href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
+            <a class="nav-link " href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="../services/digital-transformation.html">Digital Transformation
+              <li><a class="active" href="../services/digital-transformation.html">Digital Transformation
                 </a></li>
               <li><a href="../services/product-development.html">Product Development</a></li>
               <li><a href="../services/experience-design.html">Experience design</a>
               </li>
               <li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
-              <li><a href="../services/cx-audits.html">CX Audits</a></li>
-              <li><a href="../services/technical-audits.html">Technical Audits</a></li>
+              <!-- <li><a href="../services/cx-audits.html">CX Audits</a></li>
+              <li><a  href="../services/technical-audits.html">Technical Audits</a></li> -->
             </ul>
           </li>
           <li><a class="nav-link" href="../career.html">CAREERS</a></li>
@@ -68,10 +68,13 @@
   <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-2">
     <div class="banner-container container" style="justify-content: flex-end;padding-bottom: 30px;">
       <p class="subtext">Digital transformation
+
       </p>
       <h1>Modernize Business Process
+
       </h1>
       <p>Accelerate your path to industry leadership by harnessing the power of advanced technologies.
+
 
       </p>
     </div>
@@ -80,11 +83,12 @@
   <main id="main">
     <!-- ======= Overview Section ======= -->
     <section class="overview">
-      <div class="container">
+      <div class="container container-xs">
         <div class="row content">
           <div class="col-xl-12">
             <div class="section-title">
               <h2>Becoming a digital-first organisation
+
               </h2>
             </div>
             <p>
@@ -95,6 +99,7 @@
               end-to-end services allow you to modernize core technology, optimize workflows, automate operations and
               scale the value
               of data to deliver business outcomes.
+
 
             </p>
           </div>
@@ -116,13 +121,15 @@
           <div class="col-md-4">
             <div class="contentbox">
               <h3>2.1x</h3>
-              <p>Worker Productivity with AI-assisted processes</p>
+              <p>Worker Productivity with AI-assisted processes
+              </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contentbox">
               <h3>3x</h3>
-              <p>Repeat purchases with big-data driven customer communications</p>
+              <p>Repeat purchases with big-data driven customer communications
+              </p>
             </div>
           </div>
           <div class="col-md-4">
@@ -141,17 +148,18 @@
     <section class="approach">
       <div class="container container-xs">
         <div class="section-title">
-          <h2>Our approach
+          <h2>Our Approach to Digital Transformation
+
           </h2>
         </div>
         <div class="row content">
           <div class="col-md-12">
-            <p>At Torinit, we believe there is no standard pathway to digital transformation. That’s why we use a
-              holistic approach, looking at all aspects of your business to
-              uncover opportunities for transformation, and build a customized roadmap that helps you meet your goals.
-              Our experts
-              work with you at every step to integrate organization-wide processes and achieve modernization at scale,
-              work with you at every step to integrate organization-wide processes and achieve modernization,</p>
+            <p>Disrupt the digital ecosystem through the power of technical transformation. Digital transformation
+              begins by
+              discovering the essence of digitization within a realm.
+              By embodying your stakeholders, our experts analyze the goals and opportunities necessary to innovate for
+              you, with you.
+            </p>
           </div>
         </div>
         <div class="row masonry-layout">
@@ -176,7 +184,7 @@
               <h3>Define success</h3>
               <p>Set your transformation goals with desired financial and qualitative impact of each identified
                 improvement, and conduct
-                benefit analysis to ensure that
+                benefit analysis to ensure that the initiatives are financially viable to perform.
               </p>
             </div>
           </div>
@@ -184,22 +192,30 @@
           <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
               <h3>Plan</h3>
-              <p>Create a roadmap that identifies all worthy initiatives with clearly defined success metrics and
-                projected business
-                impact.
+              <p>Create a roadmap that identifies all initiatives with detailed descriptions of each task that needs to
+                be performed with
+                clearly defined success metrics.
               </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="contentbluebox">
               <h3>Build</h3>
-              <p>Develop and implement initiatives on the roadmap</p>
+              <p>Build or Implement initiatives with our state of the art of production pods that follow best in class
+                frameworks and
+                processes.
+              </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-8">
             <div class="contentbluebox">
-              <h3>Measure</h3>
-              <p>impact for immediate and continuous improvement
+              <h3>Deploy & Measure</h3>
+              <p>Onboard all stakeholders on the improved infrastructure, manage change impact, ensure that all new
+                deployment is well
+                documented and fully supported. Measure impact based on earlier defined success criteria to ensure that
+                the planned
+                outcome is being achieved at all levels.
+
               </p>
             </div>
           </div>
@@ -209,42 +225,29 @@
     </section>
     <!--End Torinit approach-->
 
-    <!-- ======= casestudy Section ======= -->
-    <section id="casestudy" class="casestudy casestudyinner">
+    <section class="overview">
       <div class="container container-xs">
-        <div class="section-title">
-          <h2>Our Impact</h2>
-        </div>
         <div class="row content">
-          <div class="col-lg-7">
-            <div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="5000"
-              style="overflow:hidden">
-              <div class="carousel-item  active">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                  incididunt ut labore
-                  et dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-                  non arcu risus quis
-                  varius.
-                </p>
+          <div class="col-xl-12">
+            <div class="section-title">
+              <h2>Invested in your success
 
-                <a href="#" class="btn-learn-more">
-                  Learn More
-                </a>
-              </div>
-
-
+              </h2>
             </div>
+            <p>
+              As your truest technical partner, our commitment remains devoted to seeing you succeed. By co-investing in
+              partner
+              companies, our promise to deliver high value outcomes is tied to our approach. With skin in the game, you
+              will see
+              tangible results for your real world problems.
 
-          </div>
-          <div class="col-lg-5">
-            <img src="../assets/img/our-impact.png" class="img-fluid casestudyimg">
+
+
+            </p>
           </div>
         </div>
       </div>
     </section>
-    <!-- End casestudy Section -->
     <!--CTA-->
     <section class="cta">
       <div class="container container-xs">
@@ -270,14 +273,14 @@
           <img src="../assets/img/logo.svg" class="footer-logo">
           <p class="text">Digital Business Transformation</p>
           <div class="copyright d-none d-lg-block">
-            <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+            <p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
           </div>
         </div>
         <div class="col-md-12 col-lg-6">
           <div class="rightsidecontent">
             <div class="footermenu">
               <ul>
-                <li><a href="../index">Home</a></li>
+
                 <li><a href="../about">About</a></li>
                 <li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
                 <li><a href="../services/digital-transformation.html">Services</a></li>
@@ -286,11 +289,11 @@
               </ul>
             </div>
             <div class="socialmedia">
-              <a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+              <a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
                   src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
             </div>
             <div class="copyright d-block d-lg-none">
-              <p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+              <p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
             </div>
           </div>
         </div>
