--- a/career.html
+++ b/career.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,7 +28,7 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="about.html">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
@@ -53,8 +53,8 @@
 							<li><a href="services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="services/cx-audits.html">CX Audits</a></li>
-							<li><a href="services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="services/cx-audits.html">CX Audits</a></li>
+							<li><a href="services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link active" href="career.html">CAREERS</a></li>
@@ -69,27 +69,31 @@
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
 		style="background: url(assets/img/career/banner.jpg);    background-position: top center!important;">
 		<div class="banner-container container">
-			<p class="subtext">Careers</p>
-			<h1>Grow your career, make a difference
-			</h1>
+			<p class="subtext">Work with us
+			</p>
+			<h1>Solve the toughest challenges.
 
+			</h1>
+			<p>Leading business transformation through high-impact digital solutions.
+			</p>
 		</div>
 		</div>
 	</section>
 	<main id="main">
 		<!-- ======= Overview Section ======= -->
 		<section class="overview">
-			<div class="container">
+			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-xl-12">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,
+							Torinit is known for its deep commitment to making a difference in our clients’ lives. We’re
+							a
+							fast-growing team of
+							passionate problem-solvers and life-long learners who aren’t afraid of tackling complex
+							problems. We
+							attract
+							highly-talented people drawn to building an exciting and meaningful career.
+
 						</p>
 					</div>
 				</div>
@@ -102,13 +106,15 @@
 				<div class="row">
 					<div class="bluebox">
 						<div class="content">
-							<h3>A few words that define us</h3>
-							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+							<h3>A global solutions company on a human scale
+							</h3>
+							<p>Collaborate, innovate, thrive
+							</p>
 						</div>
 					</div>
 					<div class="bluebox">
 						<div class="imagecontent">
-							<img src="assets/img/career/intro.png">
+							<img src="assets/img/career/intro.jpg">
 						</div>
 					</div>
 				</div>
@@ -125,19 +131,22 @@
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Empathy</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+							<p>Humans first
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Accountability</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+							<p>Leading with clarity
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="whitebgbox">
 							<h3>Reliability</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+							<p>There when you need us
+							</p>
 						</div>
 					</div>
 				</div>
@@ -152,43 +161,56 @@
 						<div class="section-title">
 							<h2>Opportunities</h2>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
+						<p>At Torinit, you’ll get to collaborate on a variety of projects, work with cutting-edge
+							technology, and
+							access unique
+							learning opportunities. Our projects are ambitious, but you won’t feel like a small fish in
+							a big pond
+							here. Our human
+							size and collaborative culture mean you’ll get to see the impact of your work on a daily
+							basis, and feel
+							like you’re
+							making a real difference.
+						</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="career-position">
-							<h3>Product Manager</h3>
+							<h3>Product Manager
+							</h3>
 							<p>Open positions: 2</p>
-							<a href="#">Apply Now</a>
+							<a href="https://www.linkedin.com/jobs/view/2656796163/?eBP=JOB_SEARCH_ORGANIC&recommendedFlavor=ACTIVELY_HIRING_COMPANY&refId=Vph%2BP7qF7VcXghGvQGGs5g%3D%3D&trackingId=8pWlp06WVQpikUqDTIp%2BCg%3D%3D&trk=flagship3_search_srp_jobs"
+								target="_blank">Apply Now</a>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="career-position">
 							<h3>Lead Product Designer</h3>
 							<p>Open positions: 1</p>
-							<a href="#">Apply Now</a>
+							<a href="https://www.linkedin.com/jobs/view/2660349959" target="_blank">Apply Now</a>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="career-position">
-							<h3>Project Manager</h3>
-							<p>Open positions: 2</p>
-							<a href="#">Apply Now</a>
+
+					<div class="description">
+						<div class="section-title blue">
+							<h2>The Torinit Advantage
+							</h2>
 						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="career-position">
-							<h3>Executive Assistant</h3>
-							<p>Open positions: 1</p>
-							<a href="#">Apply Now</a>
+
+						<div class="content">
+							<p class="mb-0">We offer a range of benefits including competitive salaries, health and
+								dental, and
+								extended holiday
+								weekends, so that
+								you can take care of yourself and your family. You’ll also have access to training
+								programs to learn
+								new
+								skills and
+								advance your career. We’ll be operating on a hybrid work model post-pandemic.
+							</p>
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -201,18 +223,7 @@
 				<div class="section-title">
 					<h2>Global Locations</h2>
 				</div>
-				<div class="row content">
-					<div class="col-12">
-						<p class="mr-btm-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor
-							incididunt ut labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
-					</div>
-				</div>
+
 				<div class="row">
 					<div class="col-md-4">
 						<div class="locationbox">
@@ -269,14 +280,14 @@
 					<img src="assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="index">Home</a></li>
+
 								<li><a href="about">About</a></li>
 								<li><a href="goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="services/digital-transformation.html">Services</a></li>
@@ -285,11 +296,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
