--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,7 +28,7 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="about.html">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
@@ -53,8 +53,8 @@
 							<li><a href="services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="services/cx-audits.html">CX Audits</a></li>
-							<li><a href="services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="services/cx-audits.html">CX Audits</a></li>
+							<li><a href="services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="career.html">CAREERS</a></li>
@@ -97,19 +97,19 @@
 							<div class="row">
 								<div class="form-group col-md-6">
 									<label>Name*</label>
-									<input class="form-control">
+									<input class="form-control" required>
 								</div>
 								<div class="form-group col-md-6">
 									<label>Email*</label>
-									<input class="form-control">
+									<input class="form-control" required>
 								</div>
 								<div class="form-group col-md-12">
 									<label>Message*</label>
-									<textarea class="form-control"></textarea>
+									<textarea class="form-control" required></textarea>
 								</div>
 								<div class="col-md-4 recaptcha" id="g-recaptcha1" style="margin-bottom: 24px;"></div>
 								<div class="col-12">
-									<button type="button">Submit</button>
+									<button type="submit">Submit</button>
 								</div>
 
 							</div>
@@ -137,14 +137,7 @@
 				</div>
 				<div class="row content">
 					<div class="col-12">
-						<p class="mr-btm-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor
-							incididunt ut labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
+
 					</div>
 				</div>
 				<div class="row">
@@ -203,14 +196,14 @@
 					<img src="assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="index">Home</a></li>
+
 								<li><a href="about">About</a></li>
 								<li><a href="goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="services/digital-transformation.html">Services</a></li>
@@ -219,11 +212,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
