--- a/goals/accelerate-sales.html
+++ b/goals/accelerate-sales.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,15 +28,14 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="../index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link active" href="#"><span>Solutions</span><i
-								class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
 							<li><a href="../goals/improve-digital-experiences.html">Improve digital experiences</a></li>
-							<li><a href="../goals/accelerate-sales.html">Accelerate sales
+							<li><a class="active" href="../goals/accelerate-sales.html">Accelerate sales
 								</a>
 							</li>
 							<li><a href="../goals/optimize-operations.html">Optimize operations</a></li>
@@ -53,8 +52,8 @@
 							<li><a href="../services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="../services/cx-audits.html">CX Audits</a></li>
-							<li><a href="../services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="../services/cx-audits.html">CX Audits</a></li>
+							<li><a href="../services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="../career.html">CAREERS</a></li>
@@ -68,69 +67,32 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-1">
 		<div class="banner-container container accerate">
-			<p class="subtext">Goal</p>
-			<h1>Accelerate Revenues</h1>
-			<p>Leading business transformation through High-Impact
-				digital solutions.
+
+			<h1>Accelerate sales
+			</h1>
+			<p>Nurture lasting relationships and cultivate engagement by refining end-to-end customer journeys.
 			</p>
 		</div>
 		</div>
 	</section>
 	<main id="main">
-		<!-- ======= The world around ======= -->
-		<section class=" worldaround">
-			<div class="container container-xs">
-				<div class="row">
-					<div class="col-12">
-						<div class="section-title">
-							<h2>Initiatives driving strategic revenue growth today</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--end The world around-->
+
 		<!--Torinit approach-->
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Torinit’s approach to digital transformation</h2>
+					<h2>Our approach to enabling greater sales</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
+						<p>Customer preferences and expectations change fast. To remain competitive, companies must
+							constantly
+							refine their
+							experiences and provide seamless interactions that keep visitors coming back. We help you
+							remove all
+							barriers to
+							purchase, increase accessibility, and find new ways to build loyalty.
+						</p>
 					</div>
 				</div>
 				<div class="row steps">
@@ -138,9 +100,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Evaluate existing acquisition funnels at each touchpoint.
+
 								</p>
 							</div>
 						</div>
@@ -149,9 +111,10 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Identify areas of leakage, drop-offs, customer confusion, and competitive
+									disadvantage.
+
 								</p>
 							</div>
 						</div>
@@ -160,9 +123,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Uncover the causes of drop-offs, and evaluate solutions.
+
 								</p>
 							</div>
 						</div>
@@ -171,9 +134,8 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Conduct pilot tests with specific customer types.
 								</p>
 							</div>
 						</div>
@@ -182,66 +144,114 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p>Implement, test and refine
 								</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="step">
-							<img src="../assets/img/steps.svg">
-							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
-								</p>
-							</div>
-						</div>
-					</div>
+
 				</div>
 			</div>
 			</div>
 		</section>
 		<!--End Torinit approach-->
-
-		<!-- ======= casestudy Section ======= -->
-		<section id="casestudy" class="casestudy casestudyinner">
+		<section id="services" class="services ">
 			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Our Impact</h2>
-				</div>
-				<div class="row content">
-					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
-							data-bs-interval="5000" style="overflow:hidden">
-							<div class="carousel-item  active">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore
-									et dolore magna
-									aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-									non arcu risus quis
-									varius.
-								</p>
-
-								<a href="#" class="btn-learn-more">
-									Learn More
-								</a>
-							</div>
-
-
+				<div class="row">
+					<div class="col-12 services-associate">
+						<div class="section-title">
+							<h2>Services associated with accelerating sales</h2>
 						</div>
-
-					</div>
-					<div class="col-lg-5">
-						<img src="../assets/img/our-impact.png" class="img-fluid casestudyimg">
 					</div>
 				</div>
 			</div>
+			<div class="container-fluid p-0">
+				<div class="row">
+					<!--service-1-->
+					<div class="bluebox">
+						<div class="bluebox d-block d-md-none">
+							<div class="imagecontent">
+								<img src="../assets/img/home/services/digital-tranformation.png">
+							</div>
+						</div>
+						<div class="content">
+							<h3>Digital Transformation</h3>
+							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
+								have worked
+								relentlessly to create
+								a proven framework that helps transform business processes from initiation to execution
+								with the help of
+								state of the
+								art digital technologies.
+							</p>
+							<a href="../services/digital-transformation.html" class="btn-learn-more stretched-link">
+								<i class="bi bi-arrow-right"></i> </a>
+						</div>
+					</div>
+					<div class="bluebox d-none d-md-block">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/digital-tranformation.png">
+						</div>
+					</div>
+
+					<!--end-->
+					<!--service-2-->
+					<div class="bluebox">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/product-development.png">
+						</div>
+					</div>
+					<div class="bluebox">
+						<div class="content">
+							<h3>Product Development</h3>
+							<p>Digital products, internal or consumer facing, have become a prominent source of
+								information
+								distribution today.
+								Enabling customer success, accelerating revenues, controlling costs are all possible
+								through appropriate
+								digital product
+								strategy, development and distribution.
+							</p>
+							<a href="../services/product-development.html" class="btn-learn-more stretched-link">
+								<i class="bi bi-arrow-right"></i> </a>
+						</div>
+					</div>
+					<!--end-->
+					<!--service-3-->
+					<div class="bluebox">
+						<div class="bluebox d-block d-md-none">
+							<div class="imagecontent">
+								<img src="../assets/img/home/services/experience-design.png">
+							</div>
+						</div>
+						<div class="content">
+							<h3>Experience Design</h3>
+							<p>Creating or improving meaningful experiential journeys for your customers, consumers,
+								employees has a
+								direct correlation
+								with the health of your enterprise both financially and qualitatively. Invest in
+								seamless experiences to
+								realize the
+								true potential of their value chain.
+							</p>
+							<a href="../services/experience-design.html" class="btn-learn-more stretched-link">
+								<i class="bi bi-arrow-right"></i> </a>
+						</div>
+					</div>
+					<div class="bluebox d-none d-md-block">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/experience-design.png">
+						</div>
+					</div>
+					<!--end-->
+
+
+
+				</div>
+			</div>
 		</section>
-		<!-- End casestudy Section -->
+
 		<!--CTA-->
 		<section class="cta">
 			<div class="container container-xs">
@@ -266,14 +276,14 @@
 					<img src="../assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="../index">Home</a></li>
+
 								<li><a href="../about">About</a></li>
 								<li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="../services/digital-transformation.html">Services</a></li>
@@ -282,11 +292,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
