--- a/goals/transform-your-enterprise.html
+++ b/goals/transform-your-enterprise.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,12 +28,13 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="../index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link active" href="#"><span>Solutions</span><i
+					<li class="dropdown"><a class="nav-link " href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
-							<li><a href="../goals/transform-your-enterprise.html">Transform your enterprise
+							<li><a class="active" href="../goals/transform-your-enterprise.html">Transform your
+									enterprise
 								</a></li>
 							<li><a href="../goals/improve-digital-experiences.html">Improve digital experiences</a></li>
 							<li><a href="../goals/accelerate-sales.html">Accelerate sales
@@ -53,8 +54,8 @@
 							<li><a href="../services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="../services/cx-audits.html">CX Audits</a></li>
-							<li><a href="../services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="../services/cx-audits.html">CX Audits</a></li>
+							<li><a href="../services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="../career.html">CAREERS</a></li>
@@ -68,10 +69,11 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 goal-banner-6 ">
 		<div class="banner-container container enterprise">
-			<p class="subtext">Goal</p>
-			<h1>Transform your enterprise
+
+			<h1>Strategic Transformation
+
 			</h1>
-			<p>Gain competitive advantage and improve your performance by building a future-facing culture.
+			<p>Leading Business transformation through high impact digital solutions.
 
 			</p>
 		</div>
@@ -84,35 +86,69 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="section-title">
-							<h2>Initiatives driving strategic revenue growth today</h2>
+							<h2>Digital initiatives driving strategic growth today
+							</h2>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+				<div class="row largedata ">
+					<div class="col-lg-12 col-md-6">
+						<div class="contentbox largeboxesfirst">
+							<h3>ERP Modernization</h3>
+							<p>Enterprises have experienced significant growth with implementation of better Enterprise
+								Resource
+								Planning (ERP) tools
+								that are capable of catering to each and every aspect of the revenue, cost, and support
+								streams.
+							</p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+
+					<div class="col-lg-4 col-md-6">
+						<div class="contentbox largeboxes">
+							<h3>Digital Distribution Experience</h3>
+							<p>Enterprises that deliver a consistent and unified experience to stakeholders have
+								outgrown competitors
+								by multi-fold.
+								Utilizing digital distribution channels like SmartTVs, Smartphones, Wearable devices,
+								and the Web to
+								service clients is
+								a core growth strategy for enterprises across industries. Ensuring that internally used
+								in-store
+								software is connected
+								to all digital channels is key to delivering a unified customer experience.
+							</p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+					<div class="col-lg-4 col-md-6">
+						<div class="contentbox largeboxes">
+							<h3>Data Intelligence</h3>
+							<p>Data mining, data sanitization, and data organization provides actionable business
+								insights that enable
+								executives to
+								make better market decisions that are fully aligned with the sentiment of the market.
+							</p>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+
+					<div class="col-lg-4 col-md-6">
+						<div class="contentbox largeboxes">
+							<h3>Enabling Digital Culture</h3>
+							<p>Embrace transparency, open communication, information sharing to enable better analysis,
+								and better
+								decision making.
+								Enterprises continue to struggle with “silo culture” powered by divisional goals rather
+								than defining
+								global corporate
+								success criteria. Utilizing technology to unify information democratizes each division
+								and empowers all
+								teams to strive
+								for better.
+
+							</p>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</section>
@@ -121,17 +157,31 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Torinit’s approach to digital transformation</h2>
+					<h2>Our Approach</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
+						<p>Technology is transforming business models around the globe. We help you rise to the
+							challenge and
+							discover new business
+							value by identifying opportunities to streamline workflows through automation,
+							productization and/or
+							digitization. We
+							build and implement a roadmap for transformation that drives efficiency, cost benefits and
+							competitive
+							advantage, in
+							line with your business goals.
+						</p>
+						<p>Our team collaborates with you to identify opportunities to streamline workflows through
+							automation,
+							productization
+							and/or digitization, in a way that makes the most sense for your business. We’ll help you
+							build and
+							implement a roadmap
+							for transformation so that you can scale your investments, improve your performance, and
+							make lives
+							easier.
+						</p>
 					</div>
 				</div>
 				<div class="row steps">
@@ -139,9 +189,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p><b>Map</b> current operational and governance workflows of each business unit.
+
 								</p>
 							</div>
 						</div>
@@ -150,9 +200,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p><b>Identify</b> steps that could be improved, automated, eliminated or digitized.
+
 								</p>
 							</div>
 						</div>
@@ -161,9 +211,9 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p><b>Define success</b>, evaluate impact, and conduct a cost benefit analysis for each
+									optimization.
 								</p>
 							</div>
 						</div>
@@ -172,9 +222,8 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p><b>Create a roadmap</b> and establish key metrics for success.
 								</p>
 							</div>
 						</div>
@@ -183,9 +232,8 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p><b>Develop</b>, and implement each action item.
 								</p>
 							</div>
 						</div>
@@ -194,9 +242,8 @@
 						<div class="step">
 							<img src="../assets/img/steps.svg">
 							<div class="content">
-								<h3>Step</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor
-									incididunt ut labore
+
+								<p><b>Measure impact</b>, test and improve.
 								</p>
 							</div>
 						</div>
@@ -205,44 +252,53 @@
 			</div>
 			</div>
 		</section>
+
 		<!--End Torinit approach-->
-
-		<!-- ======= casestudy Section ======= -->
-		<section id="casestudy" class="casestudy casestudyinner">
+		<section id="services" class="services ">
 			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Our Impact</h2>
-				</div>
-				<div class="row content">
-					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
-							data-bs-interval="5000" style="overflow:hidden">
-							<div class="carousel-item  active">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore
-									et dolore magna
-									aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-									non arcu risus quis
-									varius.
-								</p>
-
-								<a href="#" class="btn-learn-more">
-									Learn More
-								</a>
-							</div>
-
-
+				<div class="row">
+					<div class="col-12 services-associate">
+						<div class="section-title">
+							<h2>Services associated with strategic transformation</h2>
 						</div>
-
-					</div>
-					<div class="col-lg-5">
-						<img src="../assets/img/our-impact.png" class="img-fluid casestudyimg">
 					</div>
 				</div>
 			</div>
+			<div class="container-fluid p-0">
+
+				<div class="row">
+					<!--service-1-->
+					<div class="bluebox">
+						<div class="bluebox d-block d-md-none">
+							<div class="imagecontent">
+								<img src="../assets/img/home/services/digital-tranformation.png">
+							</div>
+						</div>
+						<div class="content">
+							<h3>Digital Transformation</h3>
+							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
+								have worked
+								relentlessly to create
+								a proven framework that helps transform business processes from initiation to execution
+								with the help of
+								state of the
+								art digital technologies.
+							</p>
+							<a href="../services/digital-transformation.html" class="btn-learn-more stretched-link">
+								<i class="bi bi-arrow-right"></i> </a>
+						</div>
+					</div>
+					<div class="bluebox d-none d-md-block">
+						<div class="imagecontent">
+							<img src="../assets/img/home/services/digital-tranformation.png">
+						</div>
+					</div>
+
+					<!--end-->
+				</div>
+			</div>
 		</section>
-		<!-- End casestudy Section -->
+
 		<!--CTA-->
 		<section class="cta">
 			<div class="container container-xs">
@@ -267,14 +323,14 @@
 					<img src="../assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="../index">Home</a></li>
+
 								<li><a href="../about">About</a></li>
 								<li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="../services/digital-transformation.html">Services</a></li>
@@ -283,11 +339,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
