--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,7 +28,7 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="about.html">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
@@ -52,8 +52,8 @@
 							<li><a href="services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="services/cx-audits.html">CX Audits</a></li>
-							<li><a href="services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="services/cx-audits.html">CX Audits</a></li>
+							<li><a href="services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="career.html">CAREERS</a></li>
@@ -69,30 +69,28 @@
 		<div id="heroCarousel" class="carousel slide w-100" data-bs-ride="carousel" data-bs-interval="7000">
 			<div class="carousel-item slide-1  active">
 				<div class="carousel-container container">
-					<h1>Transforming Mid-Market Enterprises
-					</h1>
-					<p>We are a digital transformation company that enables you to provide best in class digital experiences to
-						your customers,
-						consumers, employees, and other prominent stakeholders.
-
+					<h1>Transforming<br> Enterprises</h1>
+					<p>We are a digital transformation company enabling best in class digital experiences for your prominent
+						stakeholders.
 					</p>
 				</div>
 			</div>
 			<div class="carousel-item slide-2">
 				<div class="carousel-container container">
-					<h1>Accelerating your path to digitally enabled success</h1>
-					<p>Enabling High Impact data driven initiatives that improve market dominance and financial performance.
+					<h1>Accelerating your path <br>to digitally enabled success
+					</h1>
+					<p>We are a digital transformation company enabling high impact data driven initiatives that accelerate your
+						path to market
+						dominance.
 					</p>
 				</div>
 			</div>
 			<div class="carousel-item slide-3">
 				<div class="carousel-container container">
-					<h1>Kaizen - Continuous Improvement
-					</h1>
+					<p class="subtxet">kai·zen <span>/ˈkīzən/</span></p>
+					<h1> Continuous Improvement</h1>
 					<p class="">Torinit is an extended continuous improvement partner that enables you to maintain industry
-						leadership. Creating a
-						Kaizen culture within enterprises is the most proven framework to stay on top of your market.
-
+						leadership.
 					</p>
 				</div>
 			</div>
@@ -115,11 +113,13 @@
 							<h2>What we do.</h2>
 						</div>
 						<p>
-							We’re digital management consultants, product cartographers, experience designers, and software engineers.
+							We’re digital management consultants, product cartographers, experience designers, and
+							software engineers.
 							We believe
 							that digital transformation unlocks tremendous opportunities for growth.
 						</p>
-						<p>We assist enterprises plan and execute digital strategies that help you deliver seamless experiences,
+						<p>We assist enterprises plan and execute digital strategies that help you deliver seamless
+							experiences,
 							gain a competitive
 							edge, and future-proof your business.
 						</p>
@@ -167,11 +167,12 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products, internal or consumer facing, have become a prominent source of information
+							<p>Digital products, internal or+ consumer facing, have become a prominent source of information
 								distribution today.
 								Enabling customer success, accelerating revenues, controlling costs are all possible through appropriate
 								digital product
 								strategy, development and distribution.
+
 							</p>
 							<a href="services/product-development.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
@@ -192,6 +193,7 @@
 								with the health of your enterprise both financially and qualitatively. Invest in seamless experiences to
 								realize the
 								true potential of their value chain.
+
 							</p>
 							<a href="services/experience-design.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
@@ -215,13 +217,14 @@
 							<p>Harness the power of global teams to build velocity, agility, efficiency, and round the clock support.
 								Our engineering
 								pods act as a dedicated extended engineering team to your internal development efforts.
+
 							</p>
 							<a href="services/engineering-pods.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
 					</div>
 					<!--end-->
-					<div class="bluebox">
+					<!-- <div class="bluebox">
 						<div class="bluebox d-block d-md-none">
 							<div class="imagecontent">
 								<img src="assets/img/home/services/cx-audits.png">
@@ -234,6 +237,7 @@
 								share, enterprises must continuously assess the health of their CX infrastructure. CX audits assess the
 								quality of
 								existing experiences with surgical precision.
+
 							</p>
 							<a href="services/cx-audits.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
@@ -243,9 +247,9 @@
 						<div class="imagecontent">
 							<img src="assets/img/home/services/cx-audits.png">
 						</div>
-					</div>
+					</div> -->
 					<!--end-->
-					<div class="bluebox">
+					<!-- <div class="bluebox">
 						<div class="imagecontent">
 							<img src="assets/img/home/services/technical-audits.png">
 						</div>
@@ -258,11 +262,12 @@
 								customer expectations, and security risks. CXO’s make better informed decisions to experience continuous
 								growth of their
 								businesses.
+
 							</p>
 							<a href="services/technical-audits.html" class="btn-learn-more stretched-link">
 								<i class="bi bi-arrow-right"></i> </a>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
@@ -319,6 +324,7 @@
 								<p class="content-text">Gain competitive advantage and improve your performance by building a
 									future-facing culture.
 
+
 								</p>
 							</div>
 						</div>
@@ -339,6 +345,7 @@
 								<p class="content-text">Create exceptional experiences that delight your users and streamline
 									operations, so that you can focus on what matters.
 
+
 								</p>
 							</div>
 						</div>
@@ -357,6 +364,7 @@
 								</h3>
 								<p class="content-text">Nurture lasting relationships and cultivate engagement by refining end-to-end
 									customer journeys.
+
 
 								</p>
 							</div>
@@ -379,6 +387,7 @@
 								</h3>
 								<p class="content-text">Unlock efficiency and increase performance by reimagining your operational model
 									with human-centricity at the core.
+
 								</p>
 							</div>
 						</div>
@@ -401,6 +410,7 @@
 								<p class="content-text">Uncover new sources of value and boost product development by developing
 									consistent, highly effective and inspirational
 									experiences enabled by state-of-the-art design systems.
+
 
 								</p>
 							</div>
@@ -440,14 +450,13 @@
 					<img src="assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="index">Home</a></li>
 								<li><a href="about">About</a></li>
 								<li><a href="goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="services/digital-transformation.html">Services</a></li>
@@ -456,11 +465,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
