--- a/services/product-development.html
+++ b/services/product-development.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Torinit Technologies and Ventures</title>
+	<title>Torinit</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Favicons -->
@@ -28,7 +28,7 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="../index.html">HOME</a></li>
+
 					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
@@ -45,16 +45,17 @@
 						</ul>
 					</li>
 					<li class="dropdown">
-						<a class="nav-link active" href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
+						<a class="nav-link " href="#"><span>Services</span><i class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="../services/digital-transformation.html">Digital Transformation
 								</a></li>
-							<li><a href="../services/product-development.html">Product Development</a></li>
+							<li><a class="active" href="../services/product-development.html">Product Development</a>
+							</li>
 							<li><a href="../services/experience-design.html">Experience design</a>
 							</li>
 							<li><a href="../services/engineering-pods.html">Engineering Pods</a></li>
-							<li><a href="../services/cx-audits.html">CX Audits</a></li>
-							<li><a href="../services/technical-audits.html">Technical Audits</a></li>
+							<!-- <li><a href="../services/cx-audits.html">CX Audits</a></li>
+							<li><a href="../services/technical-audits.html">Technical Audits</a></li> -->
 						</ul>
 					</li>
 					<li><a class="nav-link" href="../career.html">CAREERS</a></li>
@@ -68,10 +69,13 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-5">
 		<div class="banner-container container">
-			<p class="subtext">Product strategy & development</p>
-			<h1>Turning problems into life-improving solutions
+			<p class="subtext">Product Strategy & Development
+			</p>
+			<h1>Turning challenges <br>into life-improving solutions.
+
 			</h1>
-			<p>Modernize your digital experiences to catalyse business growth.
+			<p>Modernized digital experiences to catalyse business growth.
+
 			</p>
 		</div>
 		</div>
@@ -79,27 +83,26 @@
 	<main id="main">
 		<!-- ======= Overview Section ======= -->
 		<section class="overview">
-			<div class="container">
+			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-xl-12">
 						<div class="section-title">
-							<h2>Identifying opportunities for innovation
+							<h2>Uncover opportunities for innovation
+
 							</h2>
 						</div>
 						<p>
-							We believe in using technology to elevate the human experience. We take a 360° approach to
-							assessing your
-							business
-							imperatives and defining where technology could add value. Through deep discovery and
-							extensive research,
-							we uncover
-							untapped opportunities for product enhancement, integration or innovation. By considering
-							market
-							opportunities, customer
-							needs and technical capabilities, we draft the optimal roadmap for product development and
+							We believe in using technology to elevate the human experience. Through deep discovery and
+							extensive
+							research, we
+							uncover untapped opportunities for product enhancement, integration or innovation. By
+							considering market
+							opportunities,
+							customer needs and technical capabilities, we draft the optimal roadmap for product
+							development and
 							establish key
-							metrics for
-							success.
+							metrics for success.
+
 
 						</p>
 					</div>
@@ -120,20 +123,23 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+							<h3>90%</h3>
+							<p>new digital entities fail within the first 5 years.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+							<h3>$36B</h3>
+							<p>is spent on unused software produced globally.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="contentbox">
-							<h3>86%</h3>
-							<p>Increased investments from a digital transformation</p>
+							<h3>60%</h3>
+							<p>of companies that have created new products have created new business models.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -144,73 +150,90 @@
 		<section class="approach">
 			<div class="container container-xs">
 				<div class="section-title">
-					<h2>Torinit’s approach to digital transformation</h2>
+					<h2>Bringing your product to market
+					</h2>
 				</div>
 				<div class="row content">
 					<div class="col-md-12">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et
-							dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis
-							varius. Lorem
-							ipsum dolor sit amet,</p>
+						<p>Our end-to-end process helps you design, build and scale solutions that drive customer
+							satisfaction,
+							streamline
+							operations and gain a competitive edge. Whether it’s improving an existing product,
+							customizing a
+							third-party solution,
+							or creating a whole new application, we partner with clients to tackle the toughest
+							challenges and bring
+							ideas to life.
+							You’ll be supported by an interdisciplinary team of experienced designers, engineers and
+							product managers
+							to deliver
+							state-of-the-art products.
+						</p>
 					</div>
 				</div>
 				<div class="row masonry-layout">
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
 							<h3>Discover</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+							<p>Understanding your processes, products, people, market, industry regulations and the rest
+								of the
+								universe is key to
+								building products that your markets would adapt and cherish.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-8">
 						<div class="contentbluebox">
 							<h3>Analyze</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+							<p>Identifying key aspirations, and cross industry leading trends to identify and create a
+								benchmark to
+								deliver 7 star
+								digital experiences.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-8">
 						<div class="contentbluebox">
-							<h3>Grow</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+							<h3>Plan</h3>
+							<p>Clearly define epics, stories, tasks, and acceptance criterias to create a detailed
+								release plan.
+								Ensure that technical
+								standards are mutually agreed and followed through development.
+							</p>
 						</div>
 					</div>
 
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
-							<h3>Plan</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+							<h3>Develop</h3>
+							<p>Deploy production pods that include product managers, UX/UI designers, software
+								engineers, technical
+								leads, quality
+								assurance associates, devops engineers, and delivery managers. Ensure that planned
+								initiatives are
+								executed with
+								quality, and in time.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4">
 						<div class="contentbluebox">
-							<h3>Adapt</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+							<h3>Deploy</h3>
+							<p>Launch new or improved products in your market. Ensure appropriate product marketing and
+								customer
+								success initiatives to
+								enable maximum adoption from your market.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-8">
 						<div class="contentbluebox">
-							<h3>Build</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
+							<h3>Maintain & Measure</h3>
+							<p>Maintain products, and ensure a bug tracking system is put in place to fix any run-time
+								issues. Measure
+								impact of the
+								new products on the business so improved financial performance is realized.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -219,48 +242,15 @@
 		</section>
 		<!--End Torinit approach-->
 
-		<!-- ======= casestudy Section ======= -->
-		<section id="casestudy" class="casestudy casestudyinner">
-			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Our Impact</h2>
-				</div>
-				<div class="row content">
-					<div class="col-lg-7">
-						<div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel"
-							data-bs-interval="5000" style="overflow:hidden">
-							<div class="carousel-item  active">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore
-									et dolore magna
-									aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-									non arcu risus quis
-									varius.
-								</p>
-
-								<a href="#" class="btn-learn-more">
-									Learn More
-								</a>
-							</div>
 
 
-						</div>
-
-					</div>
-					<div class="col-lg-5">
-						<img src="../assets/img/our-impact.png" class="img-fluid casestudyimg">
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End casestudy Section -->
 		<!--CTA-->
 		<section class="cta">
 			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-md-8">
-						<h3>Connect with us to learn more</h3>
+						<h3>Let’s work together
+						</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
 						<a href="../contact" class="btn-learn-more">Contact Us</a>
@@ -279,14 +269,14 @@
 					<img src="../assets/img/logo.svg" class="footer-logo">
 					<p class="text">Digital Business Transformation</p>
 					<div class="copyright d-none d-lg-block">
-						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+						<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="../index">Home</a></li>
+
 								<li><a href="../about">About</a></li>
 								<li><a href="../goals/transform-your-enterprise.html">Solutions</a></li>
 								<li><a href="../services/digital-transformation.html">Services</a></li>
@@ -295,11 +285,11 @@
 							</ul>
 						</div>
 						<div class="socialmedia">
-							<a href="https://www.linkedin.com/company/torinit-technologies-inc" target="_blank"> <img
+							<a href="https://www.linkedin.com/company/torinit-technologies-inc." target="_blank"> <img
 									src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn</a>
 						</div>
 						<div class="copyright d-block d-lg-none">
-							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+							<p>Copyright ©2016 - 2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
 				</div>
